--- a/web/style.css
+++ b/web/style.css
@@ -1,12 +1,7 @@
-#root {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 50vh;
-}
 
 .container {
-  width: 400px;
+  margin: 20px auto;
+  width: 500px;
   border: solid 1px #000;
   padding: 20px;
   box-sizing: border-box;
